--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,7 +97,39 @@ body {
 .MuiDrawer-paper--animate {
   opacity: 0;
 }
+.test{
+  left: 1
+}
+.background-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0.1;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  filter: blur(40px);
+}
+.background-video2 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0.1;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.overback {
+z-index: 1;
+margin: 5px;
+padding: 8px;
+border-radius: 12px;
+background-color: #282424;
 
+}
+.forcerender{
+  z-index: 100;
+}
 .content{
   display: flex;
   flex-direction: column;
